--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,4 +18,6 @@ dependencies = [
     "rank-bm25>=0.2.2", # For BM25 sparse retrieval
     "pandas>=2.3.3",
     "pyyaml>=6.0.3",
+    "datasets>=3.2.0",
+    "ragas>=0.2.15",
 ]
